[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/chars.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_down"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_left"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.549731 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 22 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 33, 34, 35, 34 ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_up"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.570143 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 46 ]
}

[sub_resource type="CircleShape2D" id=7]

[node name="EnemyWarrior" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 12
vframes = 8
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/walk_down = SubResource( 3 )
anims/walk_left = SubResource( 4 )
anims/walk_right = SubResource( 5 )
anims/walk_up = SubResource( 6 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
scale = Vector2( 10, 10 )
shape = SubResource( 7 )

[node name="RayUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -15 )

[node name="RayDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )

[node name="RayLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -15, 0 )

[node name="RayRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 15, 0 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
